<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.divinearts.pocketcalc.MainActivity">

    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:id="@+id/calcText"
        android:layout_marginTop="35dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:inputType="none"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:maxLength="50" />

    <Button
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:text="@string/div"
        android:id="@+id/div"
        android:layout_below="@+id/calcText"
        android:layout_alignLeft="@+id/calcText"
        android:layout_alignStart="@+id/calcText"
        android:layout_marginTop="53dp"
        android:textSize="30sp"
        android:singleLine="false"
        android:onClick="divClicked" />

    <Button
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:text="@string/mul"
        android:id="@+id/mul"
        android:layout_alignBottom="@+id/div"
        android:layout_toRightOf="@+id/div"
        android:layout_toEndOf="@+id/div"
        android:textSize="30sp"
        android:onClick="mulClicked" />

    <Button
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:text="@string/dsub"
        android:id="@+id/sub"
        android:layout_alignBottom="@+id/mul"
        android:layout_toRightOf="@+id/mul"
        android:layout_toEndOf="@+id/mul"
        android:textSize="30sp"
        android:onClick="subClicked" />

    <Button
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:text="@string/add"
        android:id="@+id/add"
        android:layout_alignBottom="@+id/sub"
        android:layout_toRightOf="@+id/sub"
        android:layout_toEndOf="@+id/sub"
        android:textSize="30sp"
        android:onClick="addClicked" />

    <Button
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:text="@string/_7"
        android:id="@+id/seven"
        android:layout_below="@+id/div"
        android:layout_alignLeft="@+id/div"
        android:layout_alignStart="@+id/div"
        android:textSize="20sp"
        android:onClick="sevenClicked" />

    <Button
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:text="@string/_8"
        android:id="@+id/eight"
        android:layout_alignBottom="@+id/seven"
        android:layout_alignLeft="@+id/mul"
        android:layout_alignStart="@+id/mul"
        android:textSize="20sp"
        android:layout_alignParentEnd="false"
        android:onClick="eightClicked" />

    <Button
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:text="@string/_9"
        android:id="@+id/nine"
        android:layout_alignBottom="@+id/eight"
        android:layout_toRightOf="@+id/eight"
        android:layout_toEndOf="@+id/eight"
        android:textSize="20sp"
        android:onClick="nineClicked" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:text="@string/_4"
        android:id="@+id/four"
        android:layout_below="@+id/seven"
        android:layout_alignLeft="@+id/seven"
        android:layout_alignStart="@+id/seven"
        android:textSize="20sp"
        android:onClick="fourClicked" />

    <Button
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:text="@string/_5"
        android:id="@+id/five"
        android:layout_alignBottom="@+id/four"
        android:layout_alignLeft="@+id/eight"
        android:layout_alignStart="@+id/eight"
        android:textSize="20sp"
        android:onClick="fiveClicked" />

    <Button
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:text="@string/_6"
        android:id="@+id/six"
        android:layout_alignBottom="@+id/five"
        android:layout_toRightOf="@+id/five"
        android:layout_toEndOf="@+id/five"
        android:textSize="20sp"
        android:onClick="sixClicked" />

    <Button
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:text="@string/_1"
        android:id="@+id/one"
        android:layout_below="@+id/four"
        android:layout_alignLeft="@+id/four"
        android:layout_alignStart="@+id/four"
        android:textSize="20sp"
        android:onClick="oneClicked" />

    <Button
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:text="@string/_2"
        android:id="@+id/two"
        android:layout_alignBottom="@+id/one"
        android:layout_toRightOf="@+id/one"
        android:layout_toEndOf="@+id/one"
        android:textSize="20sp"
        android:onClick="twoClicked" />

    <Button
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:text="@string/_3"
        android:id="@+id/three"
        android:layout_alignBottom="@+id/two"
        android:layout_toRightOf="@+id/two"
        android:layout_toEndOf="@+id/two"
        android:textSize="20sp"
        android:onClick="threeClicked" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/equals"
        android:id="@+id/equals"
        android:layout_alignLeft="@+id/add"
        android:layout_alignStart="@+id/add"
        android:layout_alignRight="@+id/add"
        android:layout_alignEnd="@+id/add"
        android:layout_alignTop="@+id/nine"
        android:textSize="30sp"
        android:onClick="equalsClicked"
        android:layout_above="@+id/three" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/_0"
        android:id="@+id/zero"
        android:layout_below="@+id/one"
        android:layout_alignLeft="@+id/one"
        android:layout_alignStart="@+id/one"
        android:textSize="20sp"
        android:layout_toLeftOf="@+id/three"
        android:layout_toStartOf="@+id/three"
        android:onClick="zeroClicked" />

    <Button
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:text="@string/dot"
        android:id="@+id/dot"
        android:layout_alignBottom="@+id/zero"
        android:layout_toRightOf="@+id/zero"
        android:layout_alignRight="@+id/three"
        android:layout_alignEnd="@+id/three"
        android:textSize="25sp"
        android:onClick="dotClicked" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c"
        android:id="@+id/clear"
        android:layout_alignEnd="@+id/equals"
        android:layout_alignStart="@+id/equals"
        android:layout_alignBottom="@+id/dot"
        android:layout_below="@+id/equals"
        android:textSize="25sp"
        android:textColor="#fc9403" />

</RelativeLayout>
